# TDD_Rediscovered_UnitTests

./: README.md
conway/: pyproject.toml
conway/src/conway/: __init__.py  board.py  game_of_life.py  seeder.py  tick.py  ticker.py
conway/tests/: pytest.ini  test_game_of_life.py  test_tick.py
conway/tests/features/: cross_game.feature
conway/tests/step_defs/: test_cross_game.py
conway/tests/unit_tests/: conftest.py  test_board.py  test_seeder.py  test_ticker.py
