[tool.poetry]
name = "conway"
version = "0.1.0"
description = ""
authors = ["iancooper <ian_hammond_cooper@yahoo.co.uk>"]

packages = [
    {include = "conway", from = "src"}
]

[tool.poetry.dependencies]
python = "3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
mock = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
